--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ function loadDoc(url) {
       document.getElementById('A3').innerHTML = this.responseText;
     }
   };
-  xhttp.open("GET", url, true);
+  xhttp.open("GET", "note.xml", true);
   xhttp.send();
 }
 </script>
