--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ function displayCD(i) {
       myFunction(this, i);
     }
   };
-  xmlhttp.open("GET", "cd_catalog.xml", true);
+  xmlhttp.open("GET", "essai.xml", true);
   xmlhttp.send();
 }
 
